# dead-air

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  HF_SETUP_GUIDE.md  README.md  SPACE_README.md  STATUS.md  STORY.md  __init__.py  analyze_trajectory.py  app.py  baseline_vllm.py  client.py  colab_results.json  colab_train.ipynb  colab_train.py  demo.py  diagnose.py  eval.py  export_episode.py  generate_assets.py  inference.py  main.py  models.py  openenv.yaml  plot_rewards.py  pyproject.toml  replay.html  smoke_test_trl.py  test_prompt.py  train.py  train_grpo.py  train_trl_grpo.py  train_unsloth_grpo.py  visualize_dashboard.py  visualize_env.py
docs/: comparisons.md  project_guide.md  visualizations.md
jobs/: dispatchr_hf_job.py
scripts/: README.md  launch_hf_job.py  launch_hf_training.py  launch_hf_training.sh  measure_completion_lengths.py  monitor_training.py  plot_training.py
server/: Dockerfile  __init__.py  adversarial_designer.py  app.py  call_generator.py  city_graph.py  constants.py  curriculum.py  dead_air_environment.py  dispatcher_environment.py  event_scheduler.py  greedy_policy.py  grpo_env_wrapper.py  hospital_model.py  log_manager.py  prompt_utils.py  reward.py  rollout_utils.py  traffic_model.py  training_tracker.py  trajectory_cache.py  unit_model.py  unsloth_grpo_utils.py
tests/: conftest.py  test_call_generator.py  test_city_graph.py  test_connection.py  test_environment.py  test_hospital_events.py  test_unit_model.py
